--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.177",
+    "lodash": "^4.17.21",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "yargs": "^17.2.1"
