--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/yargs": "^17.0.7",
+    "benchmark": "^2.1.4",
     "jest": "^27.4.2",
     "typescript": "^4.5.2"
   },
