--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
+    "typescript-collections": "^1.3.3",
     "yargs": "^17.2.1"
   }
 }
